@@ -4,6 +4,7 @@ Revision history for Database-Abstraction
 	Add unique as a synomym of distinct
 	Allow max_slurp_size to be tweaked
 	Added t/error.t
+	Catch undefined arguments in fetchrow_hashref
 
 0.07	Fri Feb 23 08:02:24 EST 2024
 	selectall_hash: Fixed "Not an ARRAY reference"
